--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+<html lang="es">
+<head>
+  <meta charset="UTF-8"/>
+  <link href="/favicon.ico?v=2" rel="shortcut icon">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <title>miPediatra</title>
+</head>
+<body>
+<div id="loading_wrap" class="loading_wrap">
+  <div class="loader_logo">
+    <img alt="logo" class="" hidden="hidden" src="/logo-color.png"/>
+  </div>
+  <div class="loading"></div>
+</div>
+<div id="app"></div>
+<script src="./src/main.js" type="module"></script>
+</body>
 </html>
